--- a/app.plist
+++ b/app.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://chuyenguyenhue.github.io/app/cnh.ipa</string>
+					<string>https://chuyennguyenhue.github.io/app/cnh.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
